--- a/.github/workflows/WakaTime.yml
+++ b/.github/workflows/WakaTime.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          WAKATIME_API_KEY: ${{ secrets.WAKA_TIME_API_SECRET }}
           GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
           SHOW_LINES_OF_CODE: "True"  # 显示截至日期写入的代码行数
           SHOW_OS: "True" # 显示系统
